1） 二维码邮件内容中增加 conf.user 和 conf.qq ，方便区分是哪个用户登录时发送的二维码邮件。
2） 二维码 url 地址改为 http://{httpServerIP}:{httpServerPort}/{any} 其中 {any} 可以是任意的字母或数字组成的字符串。
3） 修正 Partition 函数中 utf8 分割的 bug
4） QTERM 服务器单次请求内容长度由 1024 改为 8192
5） 修正自动登录时当 session.session.verify == False 时没有隐藏 https warning 的 bug
6） poll 加入 Ejimo 字符转义，感谢 @NineLucas 分享代码
7） 修正 windows 中 sys.stdout 不存在 buffer 属性的情况下无法运行的 bug

2017-05-02 qqbot v2.2.6
1） 修正 http 二维码服务器需要刷新的 bug ，二维码的 url 地址改为： http://{httpServerIP}:{httpServerPort}/{pngid} 。感谢 @huangzk 反馈

2017-04-27 qqbot v2.2.5
1） http-api 返回成员列表的 json 中增加成员的 ctype 属性。
2） 执行 list 命令时，采用 prettytable 打印成员列表。感谢网友 chx 提供帮助。
3） 改正文档中的几处笔误，感谢网友 繁星 等人反馈问题。
4） 缩小文本二维码的大小，感谢 @kairyu

2017-04-25 qqbot v2.2.4
1） 忽略 poll 返回 1202 代码。
2） 修正 qconf.py/qsession.py 中 python2 处理中文路径的 bug

2017-04-22 qqbot v2.2.3
1） 修正 list 查询或搜索时存在的 bug 。如 qq list discuss card=x 会报 <class 'sqlite3.OperationalError'>no such column: card 的错误，因为 discuss 不存在 card 属性。

2017-04-21 qqbot v2.2.2
1） list 等命令/接口的参数增加 :like: 字段，提供强大的联系人搜索功能。示例：

    # 列出名称中含有 “李” 的好友
    qq list buddy :like:李

    # 列出 QQ 中含有 “234” 的群
    qq list group :like:234

    # 列出备注名中含有 jack 的好友
    qq list buddy mark:like:jack

    # 列出 群“456班” 的中名称中含有 “李” 的成员
    qq list group-member 456班 :like:李

    # 列出 群“456班” 中名片中含有 “mike” 的成员
    qq list group-member 456班 card:like:mike

    # 列出的 讨论组“xx小组” 中名为 jack 的好友
    qq list discuss-member :like:小组 jack

2017-04-21 qqbot v2.2.1
1） 基本上修复了因 get_friend_uin2 接口被关闭而引起的一系列问题。但当 好友/群/群成员 存在同名现象或名称中含特殊字符时，还是存在无法绑定其实际 QQ 的问题。

2） 由于 smartqq 中获取联系人列表的接口实在太不稳定了，因此关闭后台联系人获取，联系人列表只有在需要用到的时候才会去请求相应的接口获取列表并更新至联系人数据库内。由此取消了 onNewContact 、 onLostContact 和 onFetchComplete 三个回调函数，并取消了 fetchInterval 和 monitorTables 两个配置选项。

3） 整理、优化联系人列表和资料的数据结构，并采用 sqlite3 数据库保存联系人列表和资料。增加联系人的各属性的详细解释，同时，各属性不再不加区分的保存为 str 对象，而是根据需要保存为 str 对象和 int 对象。

4） 利用原 2.1 版开发的机器人程序需要进行以下改动：

    1. ~\.qqbot-tmp\ 目录下的配置文件名应改为 v2.2.conf ，并删除其中的 fetchInterval 和 monitorTables 选项
