@@ -6,6 +6,8 @@
 5） 修正自动登录时当 session.session.verify == False 时没有隐藏 https warning 的 bug
 6） poll 加入 Ejimo 字符转义，感谢 @NineLucas 分享代码
 7） 修正 windows 中 sys.stdout 不存在 buffer 属性的情况下无法运行的 bug
+8） 命令行参数中增加 -b|--bench 选项，用来指定工作目录。默认的工作目录为 ~\.qqbot-tmp\ 。
+    qqbot 运行时，会在工作目录下搜索配置文件 v2.x.conf，在工作目录以下的 plugins 目录中搜索插件；并将登录 pickle 文件、联系人 db 文件 以及 临时二维码图片保存在工作目录下。
 
 2017-05-02 qqbot v2.2.6
 1） 修正 http 二维码服务器需要刷新的 bug ，二维码的 url 地址改为： http://{httpServerIP}:{httpServerPort}/{pngid} 。感谢 @huangzk 反馈
